Updating config files used to construct GSP1000 and ABCD1000 connectomes

--- a/BIDS_E2_CBIG_fMRI_preprocess.sh.save.1
+++ b/BIDS_E2_CBIG_fMRI_preprocess.sh.save.1
@@ -39,8 +39,8 @@ fi
 output_dir=${target_dir}/CBIG_fMRI_preprocess_${config_name}
 if ls ${output_dir}/${participant_id}/vol/sub*gz 1> /dev/null 2>&1; then
 	echo "It appears ${participant_id} has already been run with ${config_name}"
-#	echo "delete the outputs in ${output_dir}/${participant_id}/vol if you want to re-run"
-#	exit 0
+	echo "delete the outputs in ${output_dir}/${participant_id}/vol if you want to re-run"
+	exit 0
 else
 	mkdir -p ${output_dir}/${participant_id}
 fi
@@ -50,7 +50,7 @@ cp ${config_file} ${output_dir}
 
 # Create fmrinii file from BIDS-formatted files:
 fmrinii_file=${output_dir}/${participant_id}/${participant_id}_bold.fmrinii
-ls -1 ${bids_dir}/${participant_id}/ses-baselineYear1Arm1/func/${participant_id}_*_bold.nii.gz | nl -w2 -n rz \
+ls -1 ${bids_dir}/${participant_id}/func/${participant_id}_*_bold.nii.gz | nl -w2 -n rz \
 	> ${fmrinii_file}
 
 # Create slice timing file from BIDS-formatted json files:
@@ -59,9 +59,9 @@ if [ -f "${bids_dir}/task-rest_bold.json" ]; then
 	jq .'SliceTiming'[] ${bids_dir}/task-rest_bold.json > $st_file
 	echo "Used ${bids_dir}/task-rest_bold.json for slice timing information"
 
-elif [ -f "${bids_dir}/${participant_id}/ses-baselineYear1Arm1/func/*task-rest*_bold.json" ]; then
-	jq .'SliceTiming'[] `ls ${bids_dir}/${participant_id}/ses-baselineYear1Arm1/func/*task-rest*_bold.json | head -1` > $st_file
-	echo "Used ${bids_dir}/${participant_id}/ses-baselineYear1Arm1/func/task-rest_bold.json for slice timing information"
+elif [ -f "${bids_dir}/${participant_id}/func/task-rest_bold.json" ]; then
+	jq .'SliceTiming'[] ${bids_dir}/${participant_id}/func/task-rest_bold.json > $st_file
+	echo "Used ${bids_dir}/${participant_id}/func/task-rest_bold.json for slice timing information"
 
 else
 	echo "Could not find a task-rest_bold json file for slice timing information"
@@ -77,7 +77,7 @@ else
 	echo "Could not find freesurfer output"
 	exit 0
 fi
-
+	
 
 CBIG_preproc_fMRI_preprocess.csh \
 	-s  ${participant_id} \
@@ -87,7 +87,3 @@ CBIG_preproc_fMRI_preprocess.csh \
 	-output_d  ${output_dir} \
 	-config  ${config_file} \
 
-#if ls ${output_dir}/${participant_id}/bold/0*/*gz 1> /dev/null 2>&1; then
-#	echo "Cleaning up intermediate files for ${participant_id}"
-#	rm -f ${output_dir}/${participant_id}/bold/0*/*gz
-#fi
